@@ -6,6 +6,9 @@ Note: This file contains only changes in the 'default' branch.
 
 2018-04-28
 
+  - Added QUARTER() function to the SQL shell.
+    (See https://groups.google.com/d/msg/beancount/fTlSnQRPayo/1yN8zd76AAAJ.)
+
   - Updated version of flex on Ubuntu (2.6.1) generates warnings. Fixed a few.
     But Beancount now fails on account names with a dash inthyem; added a test
     for those. (The lexer is not the issue; I suspect a bison update from 4/17.)
